--- a/src/Client/Client.fsproj
+++ b/src/Client/Client.fsproj
@@ -11,6 +11,7 @@
         <Compile Include="Api.fs" />
         <Compile Include="State.fs" />
         <Compile Include="View\Components\Navbar.fs" />
+        <Compile Include="View\MainView.fs" />
         <Compile Include="Update.fs" />
         <Compile Include="Index.fs" />
         <Compile Include="App.fs" />
