--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
         "test:live": "webpack-dev-server --mode development --env test"
     },
     "dependencies": {
+        "bulma": "^0.9.4",
         "react": "^17.0.2",
-        "react-dom": "^17.0.2"
+        "react-dom": "^17.0.2",
+        "use-sync-external-store": "^1.2.0"
     },
     "devDependencies": {
         "copy-webpack-plugin": "^10.0.0",
