--- a/src/Client/Client.fsproj
+++ b/src/Client/Client.fsproj
@@ -10,8 +10,10 @@
         <None Include="paket.references" />
         <Compile Include="Api.fs" />
         <Compile Include="State.fs" />
+        <Compile Include="JsInterop\FileReader.fs" />
         <Compile Include="View\Components\Footer.fs" />
         <Compile Include="View\Components\Navbar.fs" />
+        <Compile Include="View\InputView.fs" />
         <Compile Include="View\MainView.fs" />
         <Compile Include="Update.fs" />
         <Compile Include="Index.fs" />
