Restructure api code :truck:

--- a/src/Server/Server.fsproj
+++ b/src/Server/Server.fsproj
@@ -5,6 +5,7 @@
     <TargetFramework>net6.0</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="Api\DeepStabP.fs" />
     <None Include="paket.references" />
     <Compile Include="Server.fs" />
   </ItemGroup>
