--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     },
     "dependencies": {
         "react": "^17.0.2",
-        "react-dom": "^17.0.2"
+        "react-dom": "^17.0.2",
+        "bulma": "^0.9.3"
     },
     "devDependencies": {
         "copy-webpack-plugin": "^10.0.0",
