--- a/src/Client/Client.fsproj
+++ b/src/Client/Client.fsproj
@@ -10,6 +10,8 @@
         <None Include="paket.references" />
         <Compile Include="Api.fs" />
         <Compile Include="State.fs" />
+        <Compile Include="ModalLogic.fs" />
+        <Compile Include="View\Components\ResultModal.fs" />
         <Compile Include="View\Components\Footer.fs" />
         <Compile Include="View\Components\Navbar.fs" />
         <Compile Include="View\InputView.fs" />
