--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
         "test:live": "webpack-dev-server --mode development --env test"
     },
     "dependencies": {
+        "bulma": "^0.9.3",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
-        "bulma": "^0.9.3"
+        "sweetalert2": "^10.16.11",
+        "sweetalert2-react-content": "^3.3.3"
     },
     "devDependencies": {
         "copy-webpack-plugin": "^10.0.0",
