--- a/src/Client/Client.fsproj
+++ b/src/Client/Client.fsproj
@@ -11,6 +11,7 @@
         <Compile Include="Api.fs" />
         <Compile Include="State.fs" />
         <Compile Include="ModalLogic.fs" />
+        <Compile Include="View\Components\SweetAlertModals.fs" />
         <Compile Include="View\Components\ResultModal.fs" />
         <Compile Include="View\Components\Footer.fs" />
         <Compile Include="View\Components\Navbar.fs" />
