--- a/src/Client/Client.fsproj
+++ b/src/Client/Client.fsproj
@@ -11,6 +11,9 @@
         <Compile Include="Api.fs" />
         <Compile Include="State.fs" />
         <Compile Include="ModalLogic.fs" />
+        <Compile Include="View\Content\Main.fs" />
+        <Compile Include="View\Content\About.fs" />
+        <Compile Include="View\Content\PrivacyPolicy.fs" />
         <Compile Include="View\Components\SweetAlertModals.fs" />
         <Compile Include="View\Components\ResultModal.fs" />
         <Compile Include="View\Components\Footer.fs" />
