Add examples dropdown :sparkles:#4

--- a/src/Client/Client.fsproj
+++ b/src/Client/Client.fsproj
@@ -15,6 +15,7 @@
         <Compile Include="View\Content\About.fs" />
         <Compile Include="View\Content\PrivacyPolicy.fs" />
         <Compile Include="View\Content\Contact.fs" />
+        <Compile Include="View\Components\Examples.fs" />
         <Compile Include="View\Components\SweetAlertModals.fs" />
         <Compile Include="View\Components\ResultModal.fs" />
         <Compile Include="View\Components\Footer.fs" />
